# one-million-crabs

./: .env.example  .gitignore  Cargo.toml  Decisione_pianeta.md  README.md
src/: lib.rs  main.rs
src/components/: energy_stacks.rs  explorer.rs  game_loop.rs  mod.rs  orchestrator.rs  planet.rs  tests.rs
src/gui/: galaxy_vis.rs  mod.rs
src/utils/: mod.rs  registry.rs  state_enums.rs  types.rs
