[package]
name = "omc-galaxy"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
dotenv = "0.15"
common-game = "2.0.0"
black-adidas-shoe = {git="https://github.com/black-adidas-shoe-org/planet.git", package="ara_kees"}
ciuc_planet = {git = "https://github.com/Pietro-Calvi/ciuc_planet.git"}
houston-we-have-a-borrow = {git="https://github.com/Houston-we-have-a-borrow/Planet.git", package="Planet"}
immutable_cosmic_borrow = {git="https://github.com/ImmutableCosmicBorrow/planet.git"}
one-million-crabs = { git = "https://github.com/Advance-Programming-2025/One_million_crabs.git", branch="dev"}
rustrelli = {git="https://github.com/Rustrelli/rustrelli.git"}
rusty-crab = {package = "rusty-crab-ap2025", version = "2.0.0-alpha.1"}


crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
once_cell = "1.21.3"
cargo-nextest = "0.9.116"
bevy = "0.17.3"
bevy_tweening = "0.14.0"

[features]
debug-prints = []
